tests/dataset/tpc-ds/compiler/erlang/q4.error
run: exit status 127
escript: exception error: bad key: cs_ext_list_price
  in function  map_get/2
     called as map_get(cs_ext_list_price,
                       #{c =>
                             #{c_customer_sk => 1,c_customer_id => "C1",
                               c_first_name => "Alice",c_last_name => "A",
                               c_login => "alice"},
                         d => #{d_date_sk => 1,d_year => 2001},
                         cs =>
                             #{cs_bill_customer_sk => 1,cs_sold_date_sk => 1,
                               cs_ext_list_price => 10,
                               cs_ext_wholesale_cost => 2,
                               cs_ext_discount_amt => 0,
                               cs_ext_sales_price => 10}})
     *** argument 1: not present in map
  in call from q4_erl__escript__1752__555493__840439__8964:'-main/1-lc$^11/1-1-'/1 (/tmp/q4.erl, line 11)
  in call from q4_erl__escript__1752__555493__840439__8964:'-main/1-lc$^10/1-0-'/1 (/tmp/q4.erl, line 11)
  in call from q4_erl__escript__1752__555493__840439__8964:main/1 (/tmp/q4.erl, line 11)
  in call from escript:run/2 (escript.erl, line 904)
  in call from escript:start/1 (escript.erl, line 418)
  in call from init:start_it/1 
  in call from init:start_em/1 
